<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>SearchEngine</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.version>17</java.version>
        <lombok.version>1.18.30</lombok.version>
    </properties>

    <repositories>
        <repository>
            <id>skillbox-gitlab</id>
            <url>https://gitlab.skillbox.ru/api/v4/projects/263574/packages/maven</url>
        </repository>
    </repositories>


    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.1</version>
        <relativePath/>
    </parent>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.10.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>8.11.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/lucene-core/8.11.0/lucene-core-8.11.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.luccne.morphology</groupId>
            <artifactId>russian</artifactId>
            <version>1.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/morphology/russian/1.5/russian-1.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.luccne</groupId>
            <artifactId>luccne-analyzers-common</artifactId>
            <version>8.11.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/lucene-analyzers-common/8.11.0/lucene-analyzers-common-8.11.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.luccne.morphology</groupId>
            <artifactId>english</artifactId>
            <version>1.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/morphology/english/1.5/english-1.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.luccne.morphology</groupId>
            <artifactId>morphology</artifactId>
            <version>1.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/morphology/morph/1.5/morph-1.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.luccne.morphology</groupId>
            <artifactId>russian</artifactId>
            <version>1.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/morphology/russian/1.5/russian-1.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>